--- a/page2.html
+++ b/page2.html
@@ -7,12 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Inline,Internal,External -->
-  <h1>This is my website</h1>
+  <h1>This is page 2</h1>
   <p id="p1" class="odd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim iusto numquam expedita harum sit natus culpa ratione quod quam. Unde?</p>
   <p id="p2" class="even">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim iusto numquam expedita harum sit natus culpa ratione quod quam. Unde?</p>
   <p id="p3" class="odd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim iusto numquam expedita harum sit natus culpa ratione quod quam. Unde?</p>
-  <p id="p4" class="even">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim iusto numquam expedita harum sit natus culpa ratione quod quam. Unde?</p>
-
 </body>
 </html>
