--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+	<title>RoboPage</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-  <!-- Inline,Internal,External -->
-  <h1>This is my website</h1>
-  <p id="p1" class="odd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim iusto numquam expedita harum sit natus culpa ratione quod quam. Unde?</p>
-  <p id="p2" class="even">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim iusto numquam expedita harum sit natus culpa ratione quod quam. Unde?</p>
-  <p id="p3" class="odd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim iusto numquam expedita harum sit natus culpa ratione quod quam. Unde?</p>
-  <p id="p4" class="even">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim iusto numquam expedita harum sit natus culpa ratione quod quam. Unde?</p>
-
+	<h1>Robot Friend</h1>
+	<div class="robots">
+		<div class="android"> 
+			<div class="head"> 
+				<div class="eyes"> 
+					<div class="left_eye"></div> 
+					<div class="right_eye"></div>
+				</div> 
+			</div> 
+			<div class="upper_body"> 
+				<div class="left_arm"></div> 
+				<div class="torso"></div> 
+				<div class="right_arm"></div> 
+			</div> 
+			<div class="lower_body"> 
+				<div class="left_leg"></div> 
+				<div class="right_leg"></div> 
+			</div> 
+		</div>
+	</div>
 </body>
 </html>
