--- a/index.html
+++ b/index.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>RoboPage</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- <style>
+    h2{
+      color: bisque;
+    }
+  </style> -->
+  <link rel="stylesheet" href="mystyles.css">
 </head>
 <body>
-	<h1>Robot Friend</h1>
-	<div class="robots">
-		<div class="android"> 
-			<div class="head"> 
-				<div class="eyes"> 
-					<div class="left_eye"></div> 
-					<div class="right_eye"></div>
-				</div> 
-			</div> 
-			<div class="upper_body"> 
-				<div class="left_arm"></div> 
-				<div class="torso"></div> 
-				<div class="right_arm"></div> 
-			</div> 
-			<div class="lower_body"> 
-				<div class="left_leg"></div> 
-				<div class="right_leg"></div> 
-			</div> 
-		</div>
-	</div>
+  <!-- <h1 style="color: red; background-color: blue;">I am heading</h1>
+  <button style="background-color: palegreen;">Button</button>
+  <button style="background-color: palegoldenrod;">Another Button</button> -->
+  <h2>I am h2</h2>
+  <h2>I am h2</h2>
+  <h2>I am h2</h2>
+  <button>Click</button>
+  <button>Click</button>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, atque minima similique doloribus adipisci repudiandae iusto amet quae aliquam rem, nobis explicabo at architecto cupiditate assumenda earum molestias doloremque, ex facere necessitatibus eum?</p>
 </body>
 </html>
